tests/models/struct/unnamed/isize/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    isize
);
fn main() {}
